package com.tjudream.designpattern.facade.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-29 14:42
 *
 * @author mengxs@lenovocloud.com
 */
public class SystemA {
    public void operationA() {

    }
}
